@@ -1,5 +1,11 @@
 2007-12-13  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet-dbus-settings.c
+		- Get Connections from the system settings daemon if it's around, and
+			track changes to those Connections	
+
+2007-12-13  Dan Williams  <dcbw@redhat.com>
+
 	* nm-applet.conf
 		- Allow other apps to query connections
 
